// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-time-picker #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label This is an error message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i" aria-describedby="gux-form-field-error-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="error" id="gux-form-field-error-i">
    This is an error message
  </span>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label 
      This is some tooltip text
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i" aria-describedby="gux-label-info-beta-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <gux-label-info-beta slot="label-info" id="gux-label-info-beta-i">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-time-zone-picker indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when indicator-mark is "required" 1`] = `
<gux-form-field-time-zone-picker indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when input attribute is "disabled" 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" disabled="" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when input attribute is "required" 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" required="" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when label-position is above 1`] = `
<gux-form-field-time-zone-picker label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when label-position is beside 1`] = `
<gux-form-field-time-zone-picker label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-beside">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-beside" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-picker #render should render component as expected when label-position is screenreader 1`] = `
<gux-form-field-time-zone-picker label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <slot name="label-info">
      </slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta value="Etc/GMT+1" workspace-default="Etc/GMT" local-default="America/Detroit" id="gux-form-field-input-i">
  </gux-time-zone-picker-beta>
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-time-zone-picker>
`;
